--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.0.2",
