--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite --host 0.0.0.0 --port 5175"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
