auto reload and add toast

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.0.2",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1"
   },
